Adds feature EM learning
* updates tests for MLE learning
* adds tests for EM learning
* adds EM learning
* EM example

--- a/examples/Basic.ipynb
+++ b/examples/Basic.ipynb
@@ -339,7 +339,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hydipy",
+   "display_name": "hydipy-agrum",
    "language": "python",
    "name": "python3"
   },
@@ -358,7 +358,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c3600649affb4014b8f71c7f90f7fd23de7adffdbbf8f65ea87c06e6de98a3e3"
+    "hash": "285d41343ce9cda7d5e97c909156023cc6fd7d5fe13631b53093ed3a59ce995f"
    }
   }
  },
