Adds log-likelihood stopping rule
* log-likelihood calculator added for EM
* log-likelihood stopping rule added for EM
* prints EM progress
* black formatted

--- a/examples/EM_Learning.ipynb
+++ b/examples/EM_Learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "from hydipy.DynamicDiscretization import Hybrid_BN, DynamicDiscretization\n",
     "from hydipy.ParameterLearning import EMLearner\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_data = pd.DataFrame(\n",
-    "            {\"a\": [\"a1\", \"a2\", \"a1\"], \"b\": [\"b1\", pd.NA, \"b2\"], \"c\": [\"c2\", \"c2\", pd.NA]},\n",
-    "        )\n",
+    "    {\"a\": [\"a1\", \"a2\", \"a1\"], \"b\": [\"b1\", pd.NA, \"b2\"], \"c\": [\"c2\", \"c2\", pd.NA]},\n",
+    ")\n",
     "a = DiscreteNode(id=\"a\", values=[[0.7], [0.3]], parents=[], states=[\"a1\", \"a2\"])\n",
     "b = DiscreteNode(id=\"b\", values=[[0.4], [0.6]], parents=[], states=[\"b1\", \"b2\"])\n",
     "c = DiscreteNode(\n",
@@ -43,34 +43,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration: 7 ; Log-likelihood: -3.32512\r"
+     ]
+    }
+   ],
    "source": [
     "eml = EMLearner(model, train_data)\n",
-    "cpts = eml.em(50)\n",
+    "cpts = eml.em()\n",
     "bn = Hybrid_BN(cpts.values())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.00980392, 0.53715279, 0.01923077, 0.01923077],\n",
-       "       [0.99019608, 0.46284721, 0.98076923, 0.98076923]])"
+       "array([[0.00980392, 0.58705602, 0.01923871, 0.01922284],\n",
+       "       [0.99019608, 0.41294398, 0.98076129, 0.98077716]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cpts['c'].values"
+    "cpts[\"c\"].values\n"
    ]
   },
   {
@@ -85,58 +93,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration: 10 ; Log-likelihood: -1.94985\r"
+     ]
+    }
+   ],
    "source": [
     "train_data_latent = pd.DataFrame(\n",
-    "            {\"a\": [\"a1\", \"a2\", \"a1\"], \"b\": [pd.NA, pd.NA, pd.NA], \"c\": [\"c2\", \"c2\", pd.NA]},\n",
-    "        )\n",
+    "    {\"a\": [\"a1\", \"a2\", \"a1\"], \"b\": [pd.NA, pd.NA, pd.NA], \"c\": [\"c2\", \"c2\", pd.NA]},\n",
+    ")\n",
     "eml2 = EMLearner(model, train_data_latent)\n",
-    "cpts = eml2.em(50)\n",
-    "bn = Hybrid_BN(cpts.values())\n"
+    "cpts = eml2.em()\n",
+    "bn = Hybrid_BN(cpts.values())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.53415948],\n",
-       "       [0.46584052]])"
+       "array([[0.52679287],\n",
+       "       [0.47320713]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cpts['b'].values\n"
+    "cpts[\"b\"].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.0180374 , 0.02059327, 0.01803086, 0.02060176],\n",
-       "       [0.9819626 , 0.97940673, 0.98196914, 0.97939824]])"
+       "array([[0.01830132, 0.02098923, 0.01828086, 0.0202848 ],\n",
+       "       [0.98169868, 0.97901077, 0.98171914, 0.9797152 ]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cpts['c'].values"
+    "cpts[\"c\"].values\n"
    ]
   }
  ],
